--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
         <div class="col-6 border-end">
             <div class="row">
                 <div class="col-12 mb-2">
-                    <h2>Cookie Extractor</h2>
+                    <h2>Ebay Conversation</h2>
                 </div>
 
                 <div class="col-12 mb-2">
